pod-pv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app: my-app
spec:
  containers:
  - name: myapp
    image: nginx
    ports:
      - containerPort: 80
    volumeMounts:
      - mountPath: "/usr/share/nginx/html"
        name: my-vol
  volumes:
    - name: my-vol
      persistentVolumeClaim:
        claimName: mypvc
