pods.yaml
apiVersion: v1
kind: Pod
metadata:
    name: my-pod
    labels:
        app: my-app
spec:
    containers :
    - name: my-container
      image: httpd
      ports:
      - containerPort: 80
