deploy.yaml
apiVersion: apps/v1                 
kind: Deployment
metadata:
  name: my-deployment
  labels: 
    app: 123-app
spec:
  strategy:
    type: RollingUpdate
  replicas: 3
  selector:
    matchLabels:          
      app: 123-app
  template:
    metadata: 
      labels:
        app: 123-app
    spec:
      containers:
        - name: my-c
          image: httpd
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: abc-svc
  labels:
    app: 123-app
spec:
  type: NodePort
  selector:
    app: 123-app
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
