rs.yaml

apiVersion: v1
kind: Service
metadata:
  name: demo-svc
  labels:
    app: cbz-app
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: rs-app
