ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    app: myingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myapp
            port: 
              number: 80
  # - host: mobile.af049ffa178f7428aa19c4548441ee9f-1118725864.ap-southeast-1.elb.amazonaws.com
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: cbzapp
  #           port: 
  #             number: 80
      - pathType: Prefix
        path: "/mobile"
        backend:
          service:
            name: cbzapp
            port: 
              number: 80
      - pathType: Prefix
        path: "/laptop"
        backend:
          service:
            name: mylaptop
            port: 
              number: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app: myapp
spec:
  containers:
  - name: myapp
    image: nginx
    ports:
      - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: v1
kind: Pod
metadata:
  name: cbzapp
  labels:
    app: cbzapp
spec:
  containers:
  - name: cbzapp
    image: shubhamkalsait1/myhttpd:latest
    ports:
      - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: cbzapp
spec:
  selector:
    app: cbzapp
  ports:
  - port: 80
    targetPort: 80
